tests/integration/snapshots/integration__conformance__n_incomplete_true.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
[tru]
stderr ---
error: unexpected character `t`. expected start of a json value
 --> stdin:1:2
  |
1 | [tru]
  |  ^
